--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,24 +2,49 @@
 spring:
     application:
       name: le-share
-    data:
-      mongodb:
-        host: 127.0.0.1
-        port: 27017
-        authentication-database: le-share
-        database: le-share
-        username: admin
-        password: admin
-        #每个主机的连接数
-        connections-per-host: 50
-        #线程队列数，它以上面connectionsPerHost值相乘的结果就是线程队列最大值
-        threads-allowed-to-block-for-connection-multiplier: 50
-        connect-timeout: 5000
-        socket-timeout: 3000
-        max-wait-time: 1500
-        #控制是否在一个连接时，系统会自动重试
-        auto-connect-retry: true
-        socket-keep-alive: true
+    datasource:
+      name: test
+      url: jdbc:mysql://127.0.0.1:3306/db_le_share?useUnicode=true&characterEncoding=utf8
+      username: root
+      password: root2019
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      druid:
+        # 连接池的配置信息
+        # 初始化大小，最小，最大
+        initial-size: 5
+        min-idle: 5
+        maxActive: 20
+        # 配置获取连接等待超时的时间
+        maxWait: 60000
+        # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+        timeBetweenEvictionRunsMillis: 60000
+        # 配置一个连接在池中最小生存的时间，单位是毫秒
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: SELECT 1
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        # 打开PSCache，并且指定每个连接上PSCache的大小
+        poolPreparedStatements: true
+        maxPoolPreparedStatementPerConnectionSize: 20
+        # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+        filters: stat,wall,slf4j
+        # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+        connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
+        # 配置DruidStatFilter
+        web-stat-filter:
+          enabled: true
+          url-pattern: "/*"
+          exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+        # 配置DruidStatViewServlet
+        stat-view-servlet:
+          url-pattern: "/druid/*"
+          reset-enable: false
+          # 登录名
+          login-username: admin
+          # 登录密码
+          login-password: 123456
 
     servlet:
       multipart:
@@ -32,7 +57,30 @@ spring:
         force: true
 
 server:
-  port: 8086
+  port: 8089
   address: 0.0.0.0
   servlet:
     context-path: /
+
+mybatis:
+  mapperLocations: classpath*:mapper/**/*.xml
+  typeAliasesPackage: com.le.share.model
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+wx:
+  appid: wx1d5f0a7eb6189e6d
+  secret: dc60723525654193569632fb127906b6
+  jscode2session-url: https://api.weixin.qq.com/sns/jscode2session?appid=${wx.appid}&secret=${wx.secret}&js_code=%s&grant_type=authorization_code
+
+cos:
+  api:
+    secret-id: AKIDA5lX3MSdZ9VdnmzyQkiW5WgaDpBIioWz
+    secret-key: KPOEi26NSIs9AvRyFApEjmk1w4wYmlV4
+    bucket: le-share-1300839762
+    region: ap-guangzhou
+    duration-seconds: 1800
+    domian: https://le-share-1300839762.cos.ap-guangzhou.myqcloud.com
+
+auth:
+  secret-key: NOEi26sTMNSIs9AvRyFApEjm
